--- a/src/app/modules/components/message/Message.scss
+++ b/src/app/modules/components/message/Message.scss
@@ -1,20 +1,20 @@
 #message {
   display: flex;
   width: 100%;
-  padding: 0 25px;
+  padding: 5px 25px;
   .message-content {
     display: flex;
     align-items: center;
-    padding: 10px;
+    padding: 5px 10px;
     margin: 5px;
     border-radius: 8px;
     background-color: #fff;
     box-shadow:
       0 4px 6px rgba(0, 0, 0, 0.1),
       0 1px 3px rgba(0, 0, 0, 0.08);
-    max-width: 65%;
-    text-align: justify;
+    max-width: 75%;
     position: relative;
+    top: 0;
 
     .message-time-status {
       float: right;
@@ -24,16 +24,16 @@
       display: flex;
       gap: 5px;
     }
-    .message-button {
-      position: absolute;
-      top: -3px;
-      right: 10px;
-      border: none;
-      background: transparent;
+  }
+  .message-button {
+    // position: absolute;
+    // top: -3px;
+    // right: 10px;
+    border: none;
+    background: transparent;
 
-      svg {
-        font-size: 17px;
-      }
+    svg {
+      font-size: 30px;
     }
   }
 }
