--- a/src/app/modules/components/chat-window/ChatWindow.css
+++ b/src/app/modules/components/chat-window/ChatWindow.css
@@ -1,16 +1,17 @@
 #chat-window {
   display: flex;
   flex-direction: column;
-  height: 100vh;
+  min-height: 100hv;
   max-height: 100%;
-  flex: 1;
+  width: 100%;
+  max-width: 100%;
 }
 
 #chat-window #messages {
   background: linear-gradient(to bottom, #b0c4de, #87ceeb);
 
-  color: #fff !important;
-  overflow: auto !important;
+  color: #fff;
+  overflow: auto;
   scrollbar-width: thin;
   display: flex;
   flex-direction: column-reverse;
@@ -20,4 +21,6 @@
   position: relative;
   top: 0;
   left: 0;
+
+  padding-top: 75px;
 }
