--- a/src/app/modules/auth/Auth.scss
+++ b/src/app/modules/auth/Auth.scss
@@ -6,6 +6,7 @@ $default-padding: 10px;
   width: 100%;
   display: flex;
   max-width: 100%;
+  overflow-y: auto;
 
   .auth__title {
     text-align: center;
