Refactor: melhoria no Login, Register, ContextAPI e funções de validação 	- Refatoração do Componente Login, Register, das funções validadoras e ContextAPI para melhor organização e reutilização de código 	- Função para verificar a disponibilidade do nome de usuário implementada

--- a/src/app/modules/components/buttons/submit/SubmitButton.scss
+++ b/src/app/modules/components/buttons/submit/SubmitButton.scss
@@ -8,6 +8,9 @@
   border-radius: 8px;
   font-weight: 500;
 }
+.submit-button[disabled] {
+  opacity: 0.5 !important;
+}
 .submit-button:hover {
   opacity: 0.85;
   scale: 0.99;
