feat: Verificação de e-mail implementada - Nova rota <email-verification> - Funções de verificação e reenvio de token implementadas

--- a/src/app/modules/auth/Auth.scss
+++ b/src/app/modules/auth/Auth.scss
@@ -24,7 +24,8 @@ $default-padding: 10px;
 .login,
 .register,
 .forgot-password,
-.reset-password {
+.reset-password,
+.email-verification {
   width: 90%;
   max-width: 400px;
   margin: auto;
