--- a/src/app/App.scss
+++ b/src/app/App.scss
@@ -20,7 +20,13 @@
 .default-padding-top {
   padding-top: 15px;
 }
-
+.center-child {
+  display: flex;
+  width: 100%;
+  height: 100%;
+  justify-content: center;
+  align-items: center;
+}
 p,
 span,
 h1 {
