--- a/src/app/modules/components/profile/Profile.scss
+++ b/src/app/modules/components/profile/Profile.scss
@@ -2,7 +2,7 @@
   flex: 1;
   display: flex;
 
-  justify-content: end;
+  justify-content: space-between;
   flex-direction: column;
 
   .logout {
@@ -11,11 +11,73 @@
     border: none;
     border-radius: 8px;
     background: #1c1c1c;
-    color: #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 15px;
+    span,
+    svg {
+      color: #fff;
+    }
+    svg {
+      font-size: 20px;
+    }
   }
   .logout:hover {
     scale: 0.95;
     opacity: 0.85;
     transition: 1s all ease;
+  }
+
+  .content {
+    flex: 1;
+    padding: 0 10px;
+    display: flex;
+    flex-direction: column;
+
+    .title-box {
+      padding: 0;
+    }
+
+    .profile__img-box {
+      position: relative;
+      top: 0;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      max-width: 100%;
+      // height: 150px;
+
+      .profile__img {
+        width: 150px;
+        height: 150px;
+        border-radius: 50%;
+        margin: auto;
+      }
+
+      button {
+        width: 125px;
+        height: 35px;
+      }
+    }
+
+    .profile__input-name,
+    .profile__input-bio {
+      max-width: 100%;
+      background: #f2f2f2;
+      padding: 5px 10px;
+      outline-color: #6959cd;
+      border-radius: 8px;
+      word-wrap: break-word;
+      white-space: pre-wrap;
+      scrollbar-width: thin;
+      overflow-y: auto;
+    }
+    .profile__input-name {
+      max-height: 60px;
+    }
+    .profile__input-bio {
+      max-height: 82px;
+    }
   }
 }
