--- a/src/app/modules/components/icons/Icons.scss
+++ b/src/app/modules/components/icons/Icons.scss
@@ -2,5 +2,17 @@
   cursor: pointer;
 }
 .icon-default-color {
+  fill: #6959cd;
   color: #6959cd;
+}
+
+button {
+  border: none;
+  background: transparent;
+  padding: 0;
+}
+button:hover {
+  scale: 0.95;
+  opacity: 0.85;
+  transition: 1s all ease;
 }
