--- a/src/app/modules/components/profile/Profile.scss
+++ b/src/app/modules/components/profile/Profile.scss
@@ -1,11 +1,14 @@
 .profile {
   flex: 1;
   display: flex;
-
   justify-content: space-between;
   flex-direction: column;
-
+  overflow-y: auto;
+  @media (max-width: 768px) {
+    padding-bottom: 65px;
+  }
   .logout {
+    min-height: 35px;
     height: 40px;
     margin: 15px;
     border: none;
@@ -59,25 +62,6 @@
         width: 125px;
         height: 35px;
       }
-    }
-
-    .profile__input-name,
-    .profile__input-bio {
-      max-width: 100%;
-      background: #f2f2f2;
-      padding: 5px 10px;
-      outline-color: #6959cd;
-      border-radius: 8px;
-      word-wrap: break-word;
-      white-space: pre-wrap;
-      scrollbar-width: thin;
-      overflow-y: auto;
-    }
-    .profile__input-name {
-      max-height: 60px;
-    }
-    .profile__input-bio {
-      max-height: 82px;
     }
   }
 }
